--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <script>
+      //Load content function for dynamic web pages
+        function loadContent(fragmentName) {
+            var url = '/' + fragmentName;
+        
+            fetch(url)
+                .then(function (response) {
+                    return response.text();
+                })
+                .then(function (html) {
+                    var contentContainer = document.getElementById('dynamic-content');
+                    contentContainer.innerHTML = html;
+                })
+                .catch(function(error) {
+                    console.log('Error', error);
+                })
+        }
+
+        //add eventlistener to monitor dynamic-content switch
+        document.addEventListener('DOMContentLoaded', function() {
+            var contentContainer = document.getElementById('dynamic-content');
+            var defaultContent = contentContainer.innerHTML;
+
+            function handleClickEvent(event) {
+                event.preventDefault();
+                var fragmentName = event.target.getAttribute('data-fragment');
+                loadContent(fragmentName);
+            }
+            
+            //different fragments connected eventListener with link
+            document.getElementById('homepage-link').addEventListener('click', handleClickEvent);
+            document.getElementById('aboutMe-link').addEventListener('click',handleClickEvent);
+            document.getElementById('projects-link').addEventListener('click', handleClickEvent);
+        });
+    </script>
     <!-- CSS Style -->
     <link rel="stylesheet" th:href="@{/css/homepage.css}" />
+
+
     <!-- Tab title -->
     <title>Marcus Gibeson Portfolio</title>
 </head>
@@ -15,8 +52,8 @@
     <nav>
         <section id="navigation">
             <div>
-                <a th:href="@{/timeline}" id="timeline-link">
-                    <span class="navigation">Timeline</span>
+                <a th:href="@{/skills}" id="skills-link">
+                    <span class="navigation">Skills</span>
                 </a>
             </div>
            
