--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -15,6 +15,7 @@
                 <div class="clearfix">
                     <div class="left-side-projects">
                         <p> Project 1</p>
+                        <p> Name: </p>
                     </div>
                     <div class="right-side-projects">
                         <p>Project 2</p>
